Replace boost::program_options with Lyra

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -390,7 +390,6 @@ else()
         SDL2::Main
         rigel_core
         Boost::boost
-        Boost::program_options
-        Boost::disable_autolinking
+        lyra
     )
 endif()
