--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,7 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Emscripten")
 
     rigel_define_wasm_targets_for_dependencies()
 else()
-    set(Boost_USE_STATIC_LIBS ON)
-    find_package(Boost 1.65 COMPONENTS program_options REQUIRED)
+    find_package(Boost 1.65 REQUIRED)
     find_package(SDL2 REQUIRED)
     find_package(SDL2_mixer REQUIRED)
 endif()
